--- a/chart.mvc/Views/Home/Index.cshtml
+++ b/chart.mvc/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 
 <div class="row">
     <div class="col-md-4">
-        Charts
+        
+        @Html.ActionLink("Chart #1", "ShowChart",new { id = 1 })
     </div>
     @*<div class="col-md-4">
         <h2>Get more libraries</h2>
