--- a/chart.mvc/Views/Shared/DisplayTemplates/ChartCell.cshtml
+++ b/chart.mvc/Views/Shared/DisplayTemplates/ChartCell.cshtml
@@ -1,6 +1,6 @@
 ﻿@model chart.lib.ChartCell
 
-<div class="chartcell">
+<div class="chartcell @Utils.GetStitchIcon(Model.Stitch)" >
 
-    <span class="glyphicon glyphicon-@Utils.GetStitchIcon(Model.Stitch)" aria-hidden="true"></span>
+    
 </div>
