--- a/chart.mvc/Views/Shared/_Layout.cshtml
+++ b/chart.mvc/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>Chart Icons made by <a href="http://www.flaticon.com/authors/dave-gandy">Dave Gandy</a> from <a href="www.flaticon.com">www.flaticon.com</a> </p>
         </footer>
     </div>
 
