k and p displayed nicely

--- a/chart.mvc/Content/chart.css
+++ b/chart.mvc/Content/chart.css
@@ -17,8 +17,8 @@
     float:left;
     width:24px;
     height:24px;
-     background-repeat:no-repeat;
-    background-attachment:fixed;
+    margin:1px;
+
 }
 .circle{
     background-image:url(../images/png/circle.png);
