--- a/chart.mvc/Views/Home/ShowChart.cshtml
+++ b/chart.mvc/Views/Home/ShowChart.cshtml
@@ -33,5 +33,8 @@
     </div>
 </div>
 <div>
-    <p>v1 - plain and simple</p>
+    <p>v1 - plain and simple, no edit</p>
+    <ul>
+        <li>add cell numbers and row numbers</li>
+    </ul>
 </div>
